--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Vitor Lohan",
   "license": "ISC",
   "description": "",
   "dependencies": {
