--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@vitejs/plugin-react": "^4.4.1",
     "axios": "^1.8.4",
     "jsbarcode": "^3.11.6",
     "react": "^19.1.0",
@@ -14,6 +15,7 @@
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.5",
+    "vite": "^6.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
