--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fontsource/inter": "^5.2.8",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
@@ -14,11 +15,13 @@
     "@vitejs/plugin-react": "^4.4.1",
     "axios": "^1.8.4",
     "jsbarcode": "^3.11.6",
+    "jspdf": "^4.0.0",
+    "jspdf-autotable": "^5.0.7",
+    "prop-types": "^15.8.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
-    "react-toastify": "^11.0.5",
     "vite": "^6.3.3",
     "web-vitals": "^2.1.4"
   },
