--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node server/index.js"
+    "start": "node server/index.js",
+    "migrar:pausa": "node migrarCamposPausa.js"
   },
   "keywords": [],
   "author": "Vitor Lohan",
