--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,3 @@
-REACT_APP_API_URL=https://dashboard-expedicao.onrender.com
+# REACT_APP_API_URL=https://dashboard-expedicao.onrender.com
+REACT_APP_API_URL=http://localhost:3001
 
