Integração com CPlus Consulta

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGODB_URI=mongodb+srv://vitor:32096321@clustercarregamento.to7zl3e.mongodb.net/carregamentos_db?retryWrites=true&w=majority&appName=ClusterCarregamento
 
+DATABASE_URL_CPLUS=postgresql://consulta:vvs%402025%40@186.232.43.142:2407/CPlus5?schema=dbo
