refactor: use Docker Hub registry image instead of local build

--- a/backend/docker-compose-expedicao.yml
+++ b/backend/docker-compose-expedicao.yml
@@ -6,10 +6,7 @@
 
 services:
   backend:
-    build:
-      context: .
-      dockerfile: Dockerfile
-    image: dashboard-expedicao-backend:latest
+    image: vitorlohan/expedicao-backend:${IMAGE_TAG:-latest}
     container_name: expedicao_backend
     hostname: expedicao-backend
     ports:
