--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,16 +14,19 @@
     "@testing-library/user-event": "^13.5.0",
     "@vitejs/plugin-react": "^4.4.1",
     "axios": "^1.8.4",
+    "chart.js": "^4.5.1",
     "jsbarcode": "^3.11.6",
     "jspdf": "^4.0.0",
     "jspdf-autotable": "^5.0.7",
     "prop-types": "^15.8.1",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.5.0",
     "react-scripts": "5.0.1",
     "vite": "^6.3.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
